@@ -157,7 +157,9 @@
                                                (list (format nil ": < ~A >" (menu-doc value)) *menu-color-submenu*)))
                                    (string (list (list (format nil "~A" (menu-item-value item)) *menu-color-comment*)))
                                    (t (list (list (format nil "~A" (menu-item-key item)) *menu-color-key*)
-                                            (format nil ": ~A" (documentation value 'function)))))
+                                            (format nil ": ~A" (documentation value 'function))
+                                            (list (format nil " ~A" (find-associated-key-bindings value))
+                                                  *menu-key-bound-color*))))
                                  info-list)
                            (when (menu-item-key item)
                              (define-info-key-fun (list (menu-item-key item))
